# platform-challenge

./: .gitignore  Dockerfile  README.md  devices.json  docker-compose.yaml  main.py  pyproject.toml
tests/example/: test_is_true.py
