[tool.poetry]
name = "platform-challenge"
version = "0.1.0"
description = "A coding/code review challenge for platform candidates."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.2"
flask-restx = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
